// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home debe hacer match con el snapshot 1`] = `
<div class="home">
  <h1>Home</h1>
</div>
`;

exports[`Pruebas en Home debe hacer match con el snapshot 1`] = `
<div class="home">
  <h1>Hola Mundo</h1><button class="btn btn-primary">Primary</button><button class="btn btn-secondary">Secondary</button><button class="btn btn-success">Success</button>
</div>
`;
